sourceCompatibility JavaVersion.VERSION_1_8
targetCompatibility JavaVersion.VERSION_1_8

dependencies {
    api "com.fasterxml.jackson.core:jackson-core:2.14.2"
    api "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2"
}
